--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NUXT_ADMIN_PROXY_URL=https://75ab411099e3090dbe5aa5c.mockapi.io
-NUXT_ORDER_PROXY_URL=https://75ab411099e3090dbe5aa5c.mockapi.io
+NUXT_ADMIN_PROXY_URL=https://run.mocky.io/v3
+NUXT_ORDER_PROXY_URL=https://run.mocky.io/v3
