--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NUXT_ADMIN_PROXY_URL=https://run.mocky.io/v3
-NUXT_ORDER_PROXY_URL=https://run.mocky.io/v3
+NUXT_ADMIN_PROXY_URL=http://localhost:3001
+NUXT_ORDER_PROXY_URL=http://localhost:3001
+NUXT_SESSION_PASSWORD=3e0ea63e-8f3c-4ffa-9412-15dbdd0d862a
