--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NUXT_ADMIN_PROXY_URL=http://localhost:3001
 NUXT_ORDER_PROXY_URL=http://localhost:3001
 NUXT_SESSION_PASSWORD=3e0ea63e-8f3c-4ffa-9412-15dbdd0d862a
+NUXT_USER_URL=http://localhost:5001
